[project]
name = "hack-assembler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kyoya Iwatsuru", email = "sd24098u@st.omu.ac.jp" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hack-assembler = "hack_assembler:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]
